[package]
name = "rust_webapp_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum_session = "0.3.1"
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.167", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
tokio = { version = "1.29.1", features = ["full"] }
yew = { version = "0.20.0", features = ["hydration", "ssr"] }
yew-router = "0.17.0"
